--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -2,34 +2,37 @@
 {% load static %}
 
 <html>
-    <head>
-        <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
-        <style>
-            @font-face {
-                font-family: 'Federation';
-                src: url('{% static 'will_of_the_prophets/federation.woff2' %}') format('woff2'),
-                     url('{% static 'will_of_the_prophets/federation.woff' %}') format('woff');
-                font-weight: 500;
-                font-style: normal;
-            }
-        </style>
-        <link href="{% sass_src 'will_of_the_prophets/style.scss' %}" rel="stylesheet" type="text/css" />
-        {% block style %}
-        {% endblock %}
-    </head>
-    <body>
-        <div class="container">
-            {% block content %}
-            {% endblock %}
-        </div>
-    </body>
-    {% load raven %}
-    <script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
-    <script>Raven.config('{% sentry_public_dsn %}').install()</script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="{% static 'will_of_the_prophets/buttholes.js' %}"></script>
-    {% block script %}
+
+<head>
+    <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
+    <style>
+        @font-face {
+            font-family: 'Federation';
+            src: url('{% static 'will_of_the_prophets/federation.woff2' %}') format('woff2'),
+            url('{% static 'will_of_the_prophets/federation.woff' %}') format('woff');
+            font-weight: 500;
+            font-style: normal;
+        }
+    </style>
+    <link href="{% sass_src 'will_of_the_prophets/style.scss' %}" rel="stylesheet" type="text/css" />
+    {% block style %}
     {% endblock %}
+</head>
+
+<body>
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
+</body>
+{% load raven %}
+<script src="https://cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script>
+<script>
+    Raven.config('{% sentry_public_dsn %}').install()
+</script>
+</script>
+<script src="{% static 'will_of_the_prophets/buttholes.js' %}"></script>
+{% block script %}
+{% endblock %}
+
 </html>
