--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -19,8 +19,8 @@
     {% endblock %}
 </head>
 
-<body>
-    <div class="container">
+<body class="site">
+    <div class="site__content">
         {% block content %}
         {% endblock %}
     </div>
