--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_site.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_site.scss
@@ -1,13 +1,39 @@
+@import "./variables";
+@import "./mixins";
+
+.site {
+  max-width: $site-max-width;
+  margin: 0 auto;
+}
+
+.site__content {
+  @include cap-variable-widths(
+    (
+      padding: 0vw 1vw
+    )
+  );
+}
+
 .site__header {
-  font-size: 9vw;
   font-family: $headings-font-family;
-  margin-bottom: 1vw;
   color: $lcars-color-tng-blue;
+
+  @include cap-variable-widths(
+    (
+      font-size: 9vw,
+      margin-bottom: 1vw
+    )
+  );
 }
 
 .site__footer {
   line-height: 1.3;
-  padding: 3vw 2vw 2vw;
-  font-size: 2vw;
   font-family: $font-family-sans-serif;
+
+  @include cap-variable-widths(
+    (
+      padding: 3vw 0vw 2vw,
+      font-size: 2vw
+    )
+  );
 }
