--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -6,7 +6,7 @@
 
 <section class="lcar-group">
     <div class="lcar-group__top-bar">
-        <div class="lcar-group__filler lcar-group__filler--yellow">INSIDE JOKES</div>
+        <div class="lcar-group__filler lcar-group__filler--top-left-elbow lcar-group__filler--yellow">INSIDE JOKES</div>
     </div>
     <div class="lcar-group__left-bar">
         <div class="lcar-group__filler lcar-group__filler--yellow">CODE 47</div>
@@ -20,7 +20,9 @@
         {{ board }}
     </div>
     <div class="lcar-group__bottom-bar">
-        <div class="lcar-group__filler lcar-group__filler--yellow">100-69:420</div>
+        <div class="lcar-group__filler lcar-group__filler--bottom-left-elbow lcar-group__filler--yellow">
+            100-69:420
+        </div>
     </div>
 </section>
 
