--- a/will_of_the_prophets/static/will_of_the_prophets/styles/index.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/index.scss
@@ -9,7 +9,7 @@
 
 body {
   background: $lcars-color-ink;
-  color: $lcars-color-orange-peel;
+  color: $lcars-color-atomic-tangerine;
   font-family: $lcars-font-family;
   margin: 3vw;
   font-size: 2.5vw;
