--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -4,39 +4,43 @@
 
 <h1 class="site__header">The Greatest Generation Presents:</h1>
 
-<section class="lcar-group">
-    <div class="lcar-group__top-bar">
-        <div class="lcar-group__filler lcar-group__filler--top-left-elbow lcar-group__filler--yellow">INSIDE JOKES</div>
+<section class="lcars-group">
+    <div class="lcars-group__top-bar">
+        <div class="lcars-group__filler lcars-group__filler--top-left-elbow lcars-group__filler--yellow">INSIDE JOKES
+        </div>
     </div>
-    <div class="lcar-group__left-bar">
-        <div class="lcar-group__filler lcar-group__filler--yellow">CODE 47</div>
-        <div class="lcar-group__filler lcar-group__filler--purple">ALL I DO IS BITS</div>
-        <div class="lcar-group__filler lcar-group__filler--lilac">MAIN COMPUTER CORE</div>
-        <div class="lcar-group__filler lcar-group__filler--yellow">DICK JOKES</div>
+    <div class="lcars-group__left-bar">
+        <div class="lcars-group__filler lcars-group__filler--yellow">CODE 47</div>
+        <div class="lcars-group__filler lcars-group__filler--purple">ALL I DO IS BITS</div>
+        <div class="lcars-group__filler lcars-group__filler--lilac">MAIN COMPUTER CORE</div>
+        <div class="lcars-group__filler lcars-group__filler--yellow">DICK JOKES</div>
     </div>
-    <div class="lcar-group__content">
-        <h2 class="lcar-group__content-header"><span class="no-break">GAME OF BUTTHOLES</span> • <span
-                class="no-break">THE WILL OF THE PROPHETS</span></h2>
+    <div class="lcars-group__content">
+        <h2 class="lcars-group__content-header">
+            <span class="no-break">GAME OF BUTTHOLES</span> •
+            <span class="no-break">THE WILL OF THE PROPHETS</span>
+        </h2>
         {{ board }}
     </div>
-    <div class="lcar-group__bottom-bar">
-        <div class="lcar-group__filler lcar-group__filler--bottom-left-elbow lcar-group__filler--yellow">
+    <div class="lcars-group__bottom-bar">
+        <div class="lcars-group__filler lcars-group__filler--bottom-left-elbow lcars-group__filler--yellow">
             100-69:420
         </div>
     </div>
 </section>
 
-<section class="lcar-group">
-    <div class="lcar-group__top-bar">
-        <div class="lcar-group__filler lcar-group__filler--yellow">42402.7</div>
+<section class="lcars-group">
+    <div class="lcars-group__top-bar">
+        <div class="lcars-group__filler lcars-group__filler--top-left-elbow lcars-group__filler--yellow">42402.7</div>
     </div>
-    <div class="lcar-group__left-bar">
-        <div class="lcar-group__filler lcar-group__filler--yellow">LEGEND</div>
-        <div class="lcar-group__filler lcar-group__filler--lilac">BAD BIT MOMENTS</div>
-        <div class="lcar-group__filler lcar-group__filler--purple">MORNHAMMER</div>
-        <div class="lcar-group__filler lcar-group__filler--blue">FUCK BOKAI</div>
+    <div class="lcars-group__left-bar">
+        <div class="lcars-group__filler lcars-group__filler--yellow">LEGEND</div>
+        <div class="lcars-group__filler lcars-group__filler--lilac">BAD BIT MOMENTS</div>
+        <div class="lcars-group__filler lcars-group__filler--purple">MORNHAMMER</div>
+        <div class="lcars-group__filler lcars-group__filler--blue">FUCK BOKAI</div>
     </div>
-    <div class="lcar-group__content">
+    <div class="lcars-group__content">
+        <h2 class="lcars-group__content-header">SPECIAL SQUARE LEGEND</h2>
         <ul class="legend">
             {% for special_square_type in special_square_types %}
             <li class="legend__item">
@@ -51,7 +55,6 @@
         </ul>
     </div>
 </section>
-
 
 {% include "will_of_the_prophets/_footer.html" %}
 
