--- a/will_of_the_prophets/templates/base.html
+++ b/will_of_the_prophets/templates/base.html
@@ -7,10 +7,18 @@
     <title>{% block title %}Game of Buttholes: The Will of the Prophets{% endblock %}</title>
     <style>
         @font-face {
-            font-family: 'Federation';
-            src: url('{% static 'will_of_the_prophets/federation.woff2' %}') format('woff2'),
-            url('{% static 'will_of_the_prophets/federation.woff' %}') format('woff');
+            font-family: 'federation';
+            src: url('{% static 'will_of_the_prophets/fonts/federation.woff2' %}') format('woff2'),
+            url('{% static 'will_of_the_prophets/fonts/federation.woff' %}') format('woff');
             font-weight: 500;
+            font-style: normal;
+        }
+
+        @font-face {
+            font-family: 'lcars context';
+            src: url('{% static 'will_of_the_prophets/fonts/lcars_context.woff2' %}') format('woff2'),
+            url('{% static 'will_of_the_prophets/fonts/lcars_context.woff' %}') format('woff');
+            font-weight: normal;
             font-style: normal;
         }
     </style>
