--- a/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/public_board.html
@@ -5,15 +5,16 @@
 <h1 class="site__header">The Greatest Generation Presents:</h1>
 
 <section class="lcars-group">
-    <div class="lcars-group__top-bar">
-        <div class="lcars-group__filler lcars-group__filler--top-left-elbow lcars-group__filler--yellow">INSIDE JOKES
+    <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
+        <div class="lcars-group__filler lcars-group__filler--top-left-elbow lcars-group__filler--yellow">
+            GAME OF BUTTHOLES BOARD
         </div>
     </div>
     <div class="lcars-group__left-bar">
-        <div class="lcars-group__filler lcars-group__filler--yellow">CODE 47</div>
+        <div class="lcars-group__filler lcars-group__filler--top-left lcars-group__filler--yellow">CODE 47</div>
         <div class="lcars-group__filler lcars-group__filler--purple">ALL I DO IS BITS</div>
         <div class="lcars-group__filler lcars-group__filler--lilac">MAIN COMPUTER CORE</div>
-        <div class="lcars-group__filler lcars-group__filler--yellow">DICK JOKES</div>
+        <div class="lcars-group__filler lcars-group__filler--bottom-left lcars-group__filler--yellow">DICK JOKES</div>
     </div>
     <div class="lcars-group__content">
         <h2 class="lcars-group__content-header">
@@ -22,25 +23,24 @@
         </h2>
         {{ board }}
     </div>
-    <div class="lcars-group__bottom-bar">
-        <div class="lcars-group__filler lcars-group__filler--bottom-left-elbow lcars-group__filler--yellow">
-            100-69:420
-        </div>
+    <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
+        <div class="lcars-group__filler lcars-group__filler--bottom-left-elbow lcars-group__filler--yellow"></div>
     </div>
 </section>
 
 <section class="lcars-group">
-    <div class="lcars-group__top-bar">
-        <div class="lcars-group__filler lcars-group__filler--top-left-elbow lcars-group__filler--yellow">42402.7</div>
+    <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--top">
+        <div class="lcars-group__filler lcars-group__filler--top-left-elbow lcars-group__filler--yellow">
+            SPECIAL SQUARE LEGEND
+        </div>
     </div>
     <div class="lcars-group__left-bar">
-        <div class="lcars-group__filler lcars-group__filler--yellow">LEGEND</div>
+        <div class="lcars-group__filler lcars-group__filler--top-left lcars-group__filler--yellow"></div>
         <div class="lcars-group__filler lcars-group__filler--lilac">BAD BIT MOMENTS</div>
         <div class="lcars-group__filler lcars-group__filler--purple">MORNHAMMER</div>
-        <div class="lcars-group__filler lcars-group__filler--blue">FUCK BOKAI</div>
+        <div class="lcars-group__filler lcars-group__filler--bottom-left lcars-group__filler--blue">FUCK BOKAI</div>
     </div>
     <div class="lcars-group__content">
-        <h2 class="lcars-group__content-header">SPECIAL SQUARE LEGEND</h2>
         <ul class="legend">
             {% for special_square_type in special_square_types %}
             <li class="legend__item">
@@ -53,6 +53,9 @@
             </li>
             {% endfor %}
         </ul>
+    </div>
+    <div class="lcars-group__horizontal-bar lcars-group__horizontal-bar--bottom">
+        <div class="lcars-group__filler lcars-group__filler--bottom-left-elbow lcars-group__filler--blue"></div>
     </div>
 </section>
 
