--- a/will_of_the_prophets/static/will_of_the_prophets/styles/_site.scss
+++ b/will_of_the_prophets/static/will_of_the_prophets/styles/_site.scss
@@ -21,12 +21,13 @@
   @include cap-variable-widths(
     (
       font-size: 9vw,
-      margin-bottom: 1vw
+      margin: 2vw 0vw
     )
   );
 }
 
 .site__footer {
+  text-align: center;
   line-height: 1.3;
   font-family: $font-family-sans-serif;
 
