--- a/will_of_the_prophets/templates/will_of_the_prophets/_footer.html
+++ b/will_of_the_prophets/templates/will_of_the_prophets/_footer.html
@@ -5,11 +5,14 @@
         <a href="http://gagh.biz" target="_top">The Greatest Generation</a>, a
         Star Trek podcast by two guys who are a bit embarrassed to have
         a Star Trek podcast.
-        Illustration and design by
-        <a href="http://www.sobreiro.com" target="_top">Felipe Sobreiro</a>.
-        Code by <a href="http://craiga.id.au" target="_top">Craig Anderson</a> and <a
-            href="http://andrew.wang-hoyer.com" target="_top">Andrew Wang-Hoyer</a>.
         <a href="https://github.com/craiga/will-of-the-prophets" target="_top">Source code available
             on GitHub</a>.
+    </p>
+
+    <p>
+        Made with ❤️by
+        <a href="http://www.sobreiro.com" target="_top">Felipe Sobreiro</a>,
+        <a href="http://craiga.id.au" target="_top">Craig Anderson</a>, and
+        <a href="http://andrew.wang-hoyer.com" target="_top">Andrew Wang-Hoyer</a>.
     </p>
 </footer>
